fix button not working on safari

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -107,6 +107,8 @@ a {
 }
 
 .btn-search {
+  background-color: $light-color;
+  color: $dark-color;
   width: 15%;
 }
 
@@ -225,9 +227,9 @@ body {
       .search-input,
       .city-input,
       .btn-search {
+        font-size: 1.1rem;
         padding: 1rem 0.5rem;
         outline: none;
-        color: $dark-color;
         border-radius: 5px;
         border: none;
       }
